--- a/ants.html
+++ b/ants.html
@@ -5,6 +5,7 @@
 
 <body>
 	<div class="cont">
+		ants = 
 	</div>
 </body>
 
@@ -12,7 +13,7 @@
 	$(function(){
 		setInterval(oneSec, 1000);
 	});
-
+	
 	var food = 0;
 	function oneSec(){
 		food++;
